<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?actionBarSize">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_explore"
        android:name="es.unex.prototipoasee.ExploreFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.HomeActivity"
        tools:layout_editor_absoluteX="2dp"
        tools:listitem="@layout/explore_item_grid_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/fragment_explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/svSearchFilm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:iconifiedByDefault="false"/>

            <ImageButton
                android:id="@+id/ibResetFilms"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red_widgets"
                app:srcCompat="@drawable/ic_reset_search">

            </ImageButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgGenreFilter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </HorizontalScrollView>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>