...
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/tvReadDelete"
                app:layout_constraintStart_toStartOf="@+id/tvReadDelete"
                app:layout_constraintTop_toBottomOf="@+id/tvReadDelete" />

            <Button
                android:id="@+id/bDelete"
                android:layout_width="225dp"
                android:layout_height="68dp"
                android:layout_marginTop="38dp"
                android:backgroundTint="@color/red_widgets"
                android:text="@string/profile_delete_permanently"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvReadLargeDelete"
                tools:ignore="TextContrastCheck" />

            <Button
...
